# ansible-runner

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/instructions/: dependencies.instructions.md  dockerfile.instructions.md
.github/prompts/: add-collection.prompt.md  bump-version.prompt.md  release.prompt.md  upgrade-ansible.prompt.md
.github/workflows/: publishing-image.yml
collections/: requirements.yml
